feat: provisions vms on debian, not alpine
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/infrastructure/templates/vendor.yaml.tmpl
+++ b/infrastructure/templates/vendor.yaml.tmpl
@@ -9,7 +9,7 @@ users:
     ssh_authorized_keys:
       - ${ssh_pub_key}
     sudo: ALL=(ALL) NOPASSWD:ALL
-    shell: /bin/ash
+    shell: /bin/bash
 runcmd:
-  - rc-update add qemu-guest-agent
-  - rc-service qemu-guest-agent start
+  - systemctl enable qemu-guest-agent
+  - systemctl start qemu-guest-agent
